AM_CPPFLAGS = -I $(top_srcdir)/include/

noinst_LIBRARIES = libirkod.a

libirkod_a_SOURCES =\
irkod_fail.c\
irkod_fail_failure_attach_count.c\
irkod_fail_failure_call.c\
irkod_fail_failure_errno.c\
irkod_fail_failure_malloc.c\
irkod_fail_failure_mb.c\
irkod_i_fail_details.c\
irkod_i_keeper.c\
irkod_i_row_cursor.c\
irkod_i_sequence.c\
irkod_i_size.c\
irkod_i_str.c\
irkod_i_str_owner.c\
irkod_i_text_canvas.c\
irkod_list.c\
irkod_mprintf.c\
irkod_node.c\
irkod_text.c\
irkod_text_canvas.c\
irkod_thing.c

#irkod/i/dump_i.c\
#irkod/i/grid_field_i.c\
#irkod/i/grid_line_i.c\
#irkod/i/id_i.c\
#irkod/data/grid_field_data.c\
#irkod/data/grid_line_data.c
